* build files:    - Don't die if depend not available    - Only verify Jetty hash once    - Add streaming lib tests to depends task
Monotone-Parent: b0e89b10e8e623b22719a7cb69c5666b2f918fa1
Monotone-Revision: 746a93826555f65d25940b75aa3f044ed36a5835

Monotone-Author: zzz@mail.i2p
Monotone-Date: 2008-11-14T14:48:08

--- a/apps/addressbook/build.xml
+++ b/apps/addressbook/build.xml
@@ -19,7 +19,10 @@
 
 	<target name="distclean" depends="clean" />
 
-        <target name="depend">
+        <condition property="depend.available">
+            <typefound name="depend" />
+        </condition>
+        <target name="depend" if="depend.available">
             <depend
                 cache="../../build"
                 srcdir="${src}"
