--- a/apps/streaming/java/build.xml
+++ b/apps/streaming/java/build.xml
@@ -6,10 +6,13 @@
         <ant dir="../../ministreaming/java/" target="build" />
 	<!-- ministreaming will build core -->
     </target>
-    <target name="depend">
+    <condition property="depend.available">
+        <typefound name="depend" />
+    </condition>
+    <target name="depend" if="depend.available">
         <depend
             cache="../../../build"
-            srcdir="./src" 
+            srcdir="./src:./test" 
             destdir="./build/obj" >
             <!-- Depend on classes instead of jars where available -->
             <classpath>
