--- a/installer/resources/wrapper.config
+++ b/installer/resources/wrapper.config
@@ -60,6 +60,11 @@ wrapper.java.additional.1=-DloggerFilenameOverride=logs/log-router-@.txt
 wrapper.java.additional.2=-Dorg.mortbay.http.Version.paranoid=true
 wrapper.java.additional.3=-Dorg.mortbay.util.FileResource.checkAliases=false
 wrapper.java.additional.4=-Dorg.mortbay.xml.XmlParser.NotValidating=true
+# Uncomment this for better performance.
+# If it doesn't work, server mode is not available in your JVM.
+# This may not be required if your machine is already "server-class".
+# See http://java.sun.com/j2se/1.5.0/docs/guide/vm/server-class.html
+#wrapper.java.additional.5=-server
 
 # Initial Java Heap Size (in MB)
 #wrapper.java.initmemory=4
@@ -134,6 +139,7 @@ wrapper.restart.delay=60
 
 wrapper.ping.interval=600
 wrapper.ping.timeout=605
+wrapper.jvm_exit.timeout=30
 
 # use the wrapper's internal timer thread.  otherwise this would 
 # force a restart of the router during daylight savings time as well
