fix windows url launcher
Monotone-Parent: b6344c3ba0482e63e3e87f93533f6ea533478cc8
Monotone-Revision: e783fd9d24df7debf8cd42332c74900b48711c4f

Monotone-Author: zzz@mail.i2p
Monotone-Date: 2008-11-26T18:32:51
Monotone-Branch: i2p.i2p

--- a/build.xml
+++ b/build.xml
@@ -332,6 +332,8 @@
         <copy file="build/BOB.jar" todir="pkg-temp/lib/" />
         <copy file="build/sam.jar" todir="pkg-temp/lib/" />
         <copy file="build/i2psnark.jar" todir="pkg-temp/lib" />
+        <!-- include systray fixes in 0.6.5 -->
+        <copy file="build/systray.jar" todir="pkg-temp/lib/" />
         <copy file="build/susimail.war" todir="pkg-temp/webapps/" />
         <copy file="build/susidns.war" todir="pkg-temp/webapps/" />
         <copy file="build/i2psnark.war" todir="pkg-temp/webapps/" />
