--- a/installer/resources/clients.config
+++ b/installer/resources/clients.config
@@ -27,7 +27,7 @@ clientApp.3.startOnLoad=true
 # load a browser pointing at the web console whenever we start up
 clientApp.4.main=net.i2p.apps.systray.UrlLauncher
 clientApp.4.name=consoleBrowser
-clientApp.4.args=http://localhost:7657/
+clientApp.4.args=http://localhost:7657/index.jsp
 clientApp.4.delay=5
 clientApp.4.startOnLoad=true
 
