Added verify command to check that a destination's BASE64 is correct for external applications that need it.
Monotone-Parent: 271e04153b418616ab9b938a9749384d99e0513c
Monotone-Revision: 8995223545f2efe6b74e9f11d8ba6b7ec17d646f

Monotone-Author: sponge@mail.i2p
Monotone-Date: 2008-11-28T16:07:29
Monotone-Branch: i2p.i2p

--- a/apps/BOB/nbproject/private/private.properties
+++ b/apps/BOB/nbproject/private/private.properties
@@ -2,5 +2,5 @@ do.depend=false
 do.jar=true
 javac.debug=true
 javadoc.preview=true
-jaxws.endorsed.dir=/usr/local/netbeans-6.1/java2/modules/ext/jaxws21/api
-user.properties.file=/root/.netbeans/6.1/build.properties
+jaxws.endorsed.dir=/usr/local/netbeans-6.5/java2/modules/ext/jaxws21/api:/usr/local/netbeans-6.5/ide10/modules/ext/jaxb/api
+user.properties.file=/root/.netbeans/6.5/build.properties
