increase standalone to 128MB max mem
Monotone-Parent: 4a86a3c95bc9c644a05028e8271051fddd588d29
Monotone-Revision: cfae41157317bbbb74c261cae7165959b4bb99bc

Monotone-Author: zzz@mail.i2p
Monotone-Date: 2008-12-02T16:23:54

--- a/installer/resources/wrapper.config
+++ b/installer/resources/wrapper.config
@@ -6,6 +6,11 @@
 # router console will NOT reread this file! You must
 # click "Shutdown", wait 11 minutes, then start i2p.
 #
+# WARNING - The wrapper is NOT run (and this file is not used)
+# if you start I2P with the 'no window' icon on Windows, or
+# with the runplain.sh script on Linux. Use the 'restartable'
+# icon on Windows or the i2prouter script on Linux to run the wrapper.
+#
 #********************************************************************
 # Java Application
 wrapper.java.command=java
