* i2psnark:       - Add default i2psnark.config for new installs       - Remove wishlist link
Monotone-Parent: 1460a68922fbee076b7995404e2b69061831e8f6
Monotone-Revision: 581d967598baaaeec280f535d01371defdee2c9f

Monotone-Author: zzz@mail.i2p
Monotone-Date: 2008-12-03T01:49:19

--- a/build.xml
+++ b/build.xml
@@ -229,6 +229,7 @@
         <copy file="build/i2psnark.war" todir="pkg-temp/webapps/" />
         <copy file="apps/i2psnark/java/build/launch-i2psnark.jar" todir="pkg-temp/" />
         <copy file="apps/i2psnark/jetty-i2psnark.xml" todir="pkg-temp/" />
+        <copy file="apps/i2psnark/i2psnark.config" todir="pkg-temp/" />
         <copy file="installer/resources/clients.config" todir="pkg-temp/" />
         <copy file="installer/resources/eepget" todir="pkg-temp/" />
         <copy file="installer/resources/i2prouter" todir="pkg-temp/" />
