--- a/apps/BOB/nbproject/project.properties
+++ b/apps/BOB/nbproject/project.properties
@@ -30,13 +30,31 @@ file.reference.mstreaming.jar-1=../ministreaming/java/build/mstreaming.jar
 file.reference.NetBeansProjects-i2p.i2p=../i2p.i2p/
 file.reference.streaming.jar=../../bob/i2p/i2p.i2p/build/streaming.jar
 file.reference.streaming.jar-1=../streaming/java/build/streaming.jar
+file.reference.wrapper-freebsd=../../installer/lib/wrapper/freebsd/
+file.reference.wrapper-linux=../../installer/lib/wrapper/linux/
+file.reference.wrapper-linux64=../../installer/lib/wrapper/linux64/
+file.reference.wrapper-macosx=../../installer/lib/wrapper/macosx/
+file.reference.wrapper-solaris=../../installer/lib/wrapper/solaris/
+file.reference.wrapper-win32=../../installer/lib/wrapper/win32/
+file.reference.wrapper.jar=../../installer/lib/wrapper/linux/wrapper.jar
+file.reference.wrapper.jar-1=../../installer/lib/wrapper/freebsd/wrapper.jar
+file.reference.wrapper.jar-2=../../installer/lib/wrapper/linux64/wrapper.jar
+file.reference.wrapper.jar-3=../../installer/lib/wrapper/macosx/wrapper.jar
+file.reference.wrapper.jar-4=../../installer/lib/wrapper/solaris/wrapper.jar
+file.reference.wrapper.jar-5=../../installer/lib/wrapper/win32/wrapper.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.i2p.jar-1}:\
     ${file.reference.i2ptunnel.jar}:\
     ${file.reference.mstreaming.jar-1}:\
-    ${file.reference.streaming.jar-1}
+    ${file.reference.streaming.jar-1}:\
+    ${file.reference.wrapper.jar-1}:\
+    ${file.reference.wrapper.jar}:\
+    ${file.reference.wrapper.jar-2}:\
+    ${file.reference.wrapper.jar-3}:\
+    ${file.reference.wrapper.jar-4}:\
+    ${file.reference.wrapper.jar-5}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
