Do not build tests
Monotone-Parent: eac1d36c16cf82b0d98167c58e1562aa443ee5e5
Monotone-Revision: d0166192dced730007f62dcf58a2a4e9cf241072

Monotone-Author: zzz@mail.i2p
Monotone-Date: 2008-12-08T15:03:45

--- a/apps/streaming/java/build.xml
+++ b/apps/streaming/java/build.xml
@@ -25,13 +25,23 @@
         <mkdir dir="./build" />
         <mkdir dir="./build/obj" />
         <javac 
-            srcdir="./src:./test" 
+            srcdir="./src" 
+            debug="true" deprecation="on" source="1.5" target="1.5" 
+            destdir="./build/obj" 
+            classpath="../../../core/java/build/i2p.jar:../../ministreaming/java/build/mstreaming.jar" />
+    </target>
+    <target name="compileTest" depends="compile">
+        <javac 
+            srcdir="./test" 
             debug="true" deprecation="on" source="1.5" target="1.5" 
             destdir="./build/obj" 
             classpath="../../../core/java/build/i2p.jar:../../ministreaming/java/build/mstreaming.jar" />
     </target>
     <target name="jar" depends="builddep, compile">
         <jar destfile="./build/streaming.jar" basedir="./build/obj" includes="**/*.class" />
+    </target>
+    <target name="jarTest" depends="jar, compileTest">
+        <jar destfile="./build/streaming.jar" basedir="./build/obj" includes="**/*Test*.class" update="true" />
     </target>
     <target name="javadoc">
         <mkdir dir="./build" />
