--- a/apps/BOB/nbproject/project.properties
+++ b/apps/BOB/nbproject/project.properties
@@ -1,5 +1,11 @@
 application.title=BOB
 application.vendor=root
+auxiliary.org-netbeans-modules-editor-indent.CodeStyle.project.expand-tabs=false
+auxiliary.org-netbeans-modules-editor-indent.CodeStyle.project.indent-shift-width=8
+auxiliary.org-netbeans-modules-editor-indent.CodeStyle.project.spaces-per-tab=8
+auxiliary.org-netbeans-modules-editor-indent.CodeStyle.project.tab-size=8
+auxiliary.org-netbeans-modules-editor-indent.CodeStyle.project.text-limit-width=80
+auxiliary.org-netbeans-modules-editor-indent.CodeStyle.usedProfile=project
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -76,6 +82,12 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
+jnlp.codebase.type=local
+jnlp.codebase.url=file:/root/NetBeansProjects/i2p.i2p/apps/BOB/dist/
+jnlp.descriptor=application
+jnlp.enabled=false
+jnlp.offline-allowed=false
+jnlp.signed=false
 main.class=net.i2p.BOB.Main
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
