dont build sam tests by default
Monotone-Parent: 7624b5c75a59eead8c7d33097be7cb8025073824
Monotone-Revision: a614c59522a6e3aabfdb946e4c35832f96240140

Monotone-Author: zzz@mail.i2p
Monotone-Date: 2009-01-13T19:54:07

--- a/apps/sam/java/build.xml
+++ b/apps/sam/java/build.xml
@@ -25,7 +25,14 @@
         <mkdir dir="./build" />
         <mkdir dir="./build/obj" />
         <javac 
-            srcdir="./src:./test" 
+            srcdir="./src" 
+            debug="true" deprecation="on" source="1.5" target="1.5" 
+            destdir="./build/obj" 
+            classpath="../../../core/java/build/i2p.jar:../../ministreaming/java/build/mstreaming.jar" />
+    </target>
+    <target name="compileTest" depends="compile">
+        <javac 
+            srcdir="./test" 
             debug="true" deprecation="on" source="1.5" target="1.5" 
             destdir="./build/obj" 
             classpath="../../../core/java/build/i2p.jar:../../ministreaming/java/build/mstreaming.jar" />
@@ -37,6 +44,9 @@
                 <attribute name="Class-Path" value="i2p.jar mstreaming.jar" />
             </manifest>
         </jar>
+    </target>
+    <target name="jarTest" depends="jar, compileTest">
+        <jar destfile="./build/sam.jar" basedir="./build/obj" includes="**/*Test*.class" update="true" />
     </target>
     <target name="javadoc">
         <mkdir dir="./build" />
