sv back in the updater
Monotone-Parent: 1abd963d021b4b822b4a0ad562b7f8ae12c440c4
Monotone-Revision: 10fa61d984ba0d277d428ed3a0358768a0acd07e

Monotone-Author: zzz@mail.i2p
Monotone-Date: 2009-01-22T17:36:03
Monotone-Branch: i2p.i2p

--- a/build.xml
+++ b/build.xml
@@ -354,6 +354,9 @@
         <copy file="build/i2ptunnel.war" todir="pkg-temp/webapps/" />
         <copy file="build/routerconsole.war" todir="pkg-temp/webapps/" />
         <copy file="build/addressbook.war" todir="pkg-temp/webapps/" />
+        <!-- New readme_*.html files - For one release only -->
+        <mkdir dir="pkg-temp/docs" />
+        <copy file="readme_sv.html" todir="pkg-temp/docs/" />
     </target>
     <target name="prepupdateRouter" depends="buildrouter">
         <delete dir="pkg-temp" />
