* Remove source from susimail.war, susidns.war, i2ptunnel.war (85KB)
Monotone-Parent: f4edeaaf6cd647f4a69847a09272b54cb51ef758
Monotone-Revision: 2e9e113533e9755fb31de99c7103e943170fa535

Monotone-Author: zzz@mail.i2p
Monotone-Date: 2009-01-29T02:12:02

--- a/apps/susimail/build.xml
+++ b/apps/susimail/build.xml
@@ -19,7 +19,7 @@
     <target name="jar" depends="compile, war" />
     <target name="war" depends="compile">
         <war destfile="susimail.war" webxml="src/WEB-INF/web.xml"
-             basedir="src/" excludes="WEB-INF/web.xml">
+             basedir="src/" excludes="WEB-INF/web.xml LICENSE src/**/*">
         </war>
     </target>
     <target name="javadoc">
