--- a/apps/i2ptunnel/java/build.xml
+++ b/apps/i2ptunnel/java/build.xml
@@ -42,7 +42,7 @@
     </target>
     <target name="war" depends="precompilejsp"> 
         <war destfile="build/i2ptunnel.war" webxml="../jsp/web-out.xml"
-             basedir="../jsp/" excludes="web.xml, *.java, *.jsp">
+             basedir="../jsp/" excludes="web.xml, **/*.java, *.jsp">
         </war>
     </target>
     <target name="precompilejsp" unless="precompilejsp.uptodate">
