Final Slackbuild cleanups, ant slackpkg target added.
Monotone-Parent: a4ebe876e3c0fe0262b223d88bc2d6d5afbc0d1c
Monotone-Revision: a887071ae8eb88840f21719846a28eea3287f900

Monotone-Author: sponge@mail.i2p
Monotone-Date: 2009-02-02T01:22:31
Monotone-Branch: i2p.i2p

--- a/build.xml
+++ b/build.xml
@@ -15,6 +15,7 @@
         <echo message="  syndie:    generate a standalone syndie install" />
         <echo message="  i2psnark:  generate a standalone i2psnark install" />
         <echo message="  javadoc:   generate javadoc for the entire project into ./build/javadoc" />
+        <echo message="  slackpkg:  generate Slackware packages in ./Slackware/i2p and ./Slackware/i2p-base" />
     </target>
     <target name="dist" depends="pkg, javadoc">
     </target>
@@ -436,6 +437,11 @@
     <target name="i2psnark">
         <ant dir="apps/i2psnark/java" target="standalone" />
         <copy file="apps/i2psnark/java/i2psnark-standalone.zip" todir="." />
+    </target>
+    <target name="slackpkg">
+        <echo message="Building Slackware package." />
+        <ant dir="Slackware/i2p/" target="slackpkg" />
+        <ant dir="Slackware/i2p-base/" target="slackpkg" />
     </target>
     <target name="findbugs" depends="build2">
         <echo message="Starting findbugs, this will take a while..." />
