debian package instructions
As Debian's package building system is rather complicated and requires root
access unconditionally for some reason, doing it from ant isn't really
feasible. However to build any debian package anywhere is the same system, so
including helpful documentation on how to use that system as an ant build
target would be most useful in this case. Hopefully Debian users will
only have to deal with the already built .deb anyway.


Monotone-Parent: a887071ae8eb88840f21719846a28eea3287f900
Monotone-Revision: d14d24978b11daeff7d37002b7ac3ec5b5535475

Monotone-Author: dream@mail.i2p
Monotone-Date: 2009-02-06T18:39:51
Monotone-Branch: i2p.i2p

--- a/build.xml
+++ b/build.xml
@@ -16,6 +16,10 @@
         <echo message="  i2psnark:  generate a standalone i2psnark install" />
         <echo message="  javadoc:   generate javadoc for the entire project into ./build/javadoc" />
         <echo message="  slackpkg:  generate Slackware packages in ./Slackware/i2p and ./Slackware/i2p-base" />
+        <echo message="  debianhowto: instructions on building Debian packages" />
+    </target>
+    <target name="debianhowto">
+        <echo message="To build debian packages, you must run dpkg-buildpackage as root in the source directory. It will then run ant for you. dpkg-buildpackage is found in the 'dpkg-dev' package. Also it should work fine to use the 'fakeroot' package with dpkg-buildpackage, if you don't want to run as root. Please read 'man dpkg-buildpackage' before building any packages yourself." />
     </target>
     <target name="dist" depends="pkg, javadoc">
     </target>
