--- a/android/AndroidManifest.xml
+++ b/android/AndroidManifest.xml
@@ -3,9 +3,11 @@
       package="net.i2p.router"
       android:versionCode="1"
       android:versionName="1.0.0">
+    <uses-permission android:name="android.permission.INTERNET" />
     <application android:label="@string/app_name">
         <activity android:name=".I2PAndroid"
-                  android:label="@string/app_name">
+                  android:label="@string/app_name"
+                  android:launchMode="singleTask" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
