readme_fr - thanks Narya and Mathiasdm
Monotone-Parent: 749b191950eba69b8ab161b1a0cb555062e84f46
Monotone-Revision: e16539af94b20c3931fe80fdfd6eb1dc60b28624

Monotone-Author: zzz@mail.i2p
Monotone-Date: 2009-03-26T18:51:43
Monotone-Branch: i2p.i2p

--- a/build.xml
+++ b/build.xml
@@ -276,6 +276,7 @@
         <mkdir dir="pkg-temp/docs" />
         <copy file="readme.html" todir="pkg-temp/docs/" />
         <copy file="readme_de.html" todir="pkg-temp/docs/" />
+        <copy file="readme_fr.html" todir="pkg-temp/docs/" />
         <copy file="readme_nl.html" todir="pkg-temp/docs/" />
         <copy file="readme_sv.html" todir="pkg-temp/docs/" />
         <!-- polecat: please put your modified toolbar.html in installer/resources/toolbar.html 
@@ -362,7 +363,7 @@
         <copy file="build/addressbook.war" todir="pkg-temp/webapps/" />
         <!-- New readme_*.html files - For one release only -->
         <mkdir dir="pkg-temp/docs" />
-        <copy file="readme_sv.html" todir="pkg-temp/docs/" />
+        <copy file="readme_fr.html" todir="pkg-temp/docs/" />
     </target>
     <target name="prepupdateRouter" depends="buildrouter">
         <delete dir="pkg-temp" />
