2009-04-03 sponge     * Fix broken dependencies for BOB.jar
Monotone-Parent: a6fcd6d7ec60d392543269acf5dcdef44296cc60
Monotone-Revision: 3549ac5f19210831c1d2bd31e00a0f4828bff84f

Monotone-Author: sponge@mail.i2p
Monotone-Date: 2009-04-03T13:31:41
Monotone-Branch: i2p.i2p

--- a/apps/BOB/nbproject/project.properties
+++ b/apps/BOB/nbproject/project.properties
@@ -24,40 +24,23 @@ dist.dir=dist
 dist.jar=${dist.dir}/BOB.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
-file.reference.build-javadoc=../../../i2p.i2p/build/javadoc
-file.reference.core.jar=../i2p.i2p/core/dist/core.jar
-file.reference.i2p.jar=../../bob/i2p/i2p.i2p/build/i2p.jar
-file.reference.i2p.jar-1=../../build/i2p.jar
-file.reference.i2p.jar-2=../i2p.i2p/core/java/build/i2p.jar
-file.reference.i2p.jar-3=../../../i2p.i2p/build/i2p.jar
-file.reference.i2ptunnel.jar=../../../i2p.i2p/build/i2ptunnel.jar
-file.reference.java-src=../i2p.i2p/core/java/src/
-file.reference.jbigi.jar=../../bob/i2p/i2p.i2p/build/jbigi.jar
-file.reference.mstreaming.jar=../../bob/i2p/i2p.i2p/build/mstreaming.jar
-file.reference.mstreaming.jar-1=../../build/mstreaming.jar
-file.reference.mstreaming.jar-2=../../../i2p.i2p/build/mstreaming.jar
-file.reference.NetBeansProjects-i2p.i2p=../i2p.i2p/
-file.reference.router.jar=../../build/router.jar
-file.reference.streaming.jar=../../bob/i2p/i2p.i2p/build/streaming.jar
-file.reference.streaming.jar-1=../../../i2p.i2p/build/streaming.jar
-file.reference.wrapper-freebsd=../../installer/lib/wrapper/freebsd/
-file.reference.wrapper-linux=../../installer/lib/wrapper/linux/
-file.reference.wrapper-linux64=../../installer/lib/wrapper/linux64/
-file.reference.wrapper-macosx=../../installer/lib/wrapper/macosx/
-file.reference.wrapper-solaris=../../installer/lib/wrapper/solaris/
-file.reference.wrapper-win32=../../installer/lib/wrapper/win32/
+file.reference.build-javadoc=../../i2p.i2p/build/javadoc
+file.reference.i2p.jar=../../core/java/build/i2p.jar
+file.reference.i2ptunnel.jar=../i2ptunnel/java/build/i2ptunnel.jar
+file.reference.mstreaming.jar=../ministreaming/java/build/mstreaming.jar
+file.reference.router.jar=../../router/java/build/router.jar
+file.reference.streaming.jar=../streaming/java/build/streaming.jar
 file.reference.wrapper.jar=../../installer/lib/wrapper/linux/wrapper.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.wrapper.jar}:\
-    ${file.reference.streaming.jar-1}:\
-    ${file.reference.i2ptunnel.jar}:\
-    ${file.reference.i2p.jar-1}:\
     ${file.reference.router.jar}:\
-    ${file.reference.mstreaming.jar-1}:\
-    ${file.reference.mstreaming.jar-2}:\
-    ${file.reference.i2p.jar-3}
+    ${file.reference.i2ptunnel.jar}:\
+    ${file.reference.mstreaming.jar}:\
+    ${file.reference.streaming.jar}:\
+    ${file.reference.wrapper.jar}:\
+    ${file.reference.i2p.jar}:\
+    ${file.reference.router.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
