2009-04-04 sponge     * Hopeful fixups to the infamous orpahned tunnel problem.     * BOB now 0.0.5
Monotone-Parent: 3c3cde6b1fc27309551438618efafaaff498486e
Monotone-Revision: 35acb6ca244c7f75f023f526b80540e80353c38b

Monotone-Author: sponge@mail.i2p
Monotone-Date: 2009-04-04T19:47:36
Monotone-Branch: i2p.i2p

--- a/apps/BOB/nbproject/project.properties
+++ b/apps/BOB/nbproject/project.properties
@@ -27,6 +27,7 @@ excludes=
 file.reference.build-javadoc=../../i2p.i2p/build/javadoc
 file.reference.i2p.jar=../../core/java/build/i2p.jar
 file.reference.i2ptunnel.jar=../i2ptunnel/java/build/i2ptunnel.jar
+file.reference.jbigi.jar=../../installer/lib/jbigi/jbigi.jar
 file.reference.mstreaming.jar=../ministreaming/java/build/mstreaming.jar
 file.reference.router.jar=../../router/java/build/router.jar
 file.reference.streaming.jar=../streaming/java/build/streaming.jar
