New application for I2P: desktopgui. Should eventually replace systray, and have more functionality.
To use the application, you need to (by default) add the following to clients.config :
# desktopgui
clientApp.6.args=
clientApp.6.delay=5
clientApp.6.main=desktopgui.Main
clientApp.6.name=desktopgui
clientApp.6.startOnLoad=true


Monotone-Parent: ac3b23a1d65017e99af5231a8248590c278c136f
Monotone-Revision: 55d95b6e4ed0e5c29b06b92d8b0dcf782fd2af09

Monotone-Author: mathiasdm@mail.i2p
Monotone-Date: 2009-04-06T17:53:32
Monotone-Branch: i2p.i2p

--- a/installer/resources/wrapper.config
+++ b/installer/resources/wrapper.config
@@ -54,6 +54,10 @@ wrapper.java.classpath.17=lib/systray.jar
 wrapper.java.classpath.18=lib/systray4j.jar
 # BOB
 wrapper.java.classpath.19=lib/BOB.jar 
+# desktopgui
+wrapper.java.classpath.20=lib/appframework.jar
+wrapper.java.classpath.21=lib/swing-worker.jar
+wrapper.java.classpath.22=lib/desktopgui.jar
 
 # Java Library Path (location of Wrapper.DLL or libwrapper.so)
 wrapper.java.library.path.1=.
