--- a/apps/desktopgui/nbproject/project.properties
+++ b/apps/desktopgui/nbproject/project.properties
@@ -25,9 +25,9 @@ file.reference.router.jar=../../router/java/build/router.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${libs.swing-app-framework.classpath}:\
     ${file.reference.router.jar}:\
-    ${file.reference.i2p.jar}
+    ${file.reference.i2p.jar}:\
+    ${libs.swing-app-framework.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
